sc2/src/uqm/rust_bridge_mainloop.h

/* --- Static-function wrappers (defined in starcon.c) --------------------- */

/* Calls SplashScreen (BackgroundInitKernel). */
void uqm_splash_with_bg_init_kernel (void);
/* Calls Battle (&on_battle_frame). */
void uqm_battle_with_frame_callback (void);
/* --- Activity accessors -------------------------------------------------- */
/* ACTIVITY is typedef'd to UWORD in globdata.h; using UWORD here
 * avoids a heavy include dependency for this bridge header. */

UWORD get_current_activity (void);
void set_current_activity (UWORD v);
UWORD get_next_activity (void);
void set_next_activity (UWORD v);
UWORD get_last_activity (void);
void set_last_activity (UWORD v);
/* --- Named game-state accessors (GET_GAME_STATE / SET_GAME_STATE) -------- */

BYTE uqm_get_chmmr_bomb_state (void);
void uqm_set_chmmr_bomb_state (BYTE v);
BYTE uqm_get_starbase_available (void);
BYTE uqm_get_global_flags_and_data (void);
BYTE uqm_get_kohr_ah_killed_all (void);
/* GLOBAL_SIS (CrewEnlisted) as a COUNT (UWORD). */
COUNT uqm_get_crew_enlisted (void);
/* --- Macro / global wrappers -------------------------------------------- */

/* Wraps ZeroVelocityComponents (&GLOBAL (velocity)). */
void uqm_zero_global_velocity (void);
/* Wraps SetFlashRect (NULL). */
void uqm_set_flash_rect_null (void);
/* Calls SetPlayerInputAll (); on failure logs a fatal message and calls
 * explode () (does not return). Mirrors the C main loop's behavior. */
void uqm_set_player_input_all_or_explode (void);
/* Sets the MainExited global to the given BOOLEAN value. */
void set_main_exited (BOOLEAN b);
/* Calls initAudio (snddriver, soundflags). */
void uqm_init_audio (void);